Added images & placeholder images + links

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -303,6 +303,10 @@ nav {
     justify-content: flex-end;
   }
   
+  .project {
+    object-fit: contain;
+  }
+
   /* Contact Me */
   #contact {
     display: flex;
