--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -449,13 +449,9 @@ body {
 
 /* Other Projects Section Row 2 & Overlay */
 .tertiary-project {
-  width: 355px;
+  width: 100%;
   height: 200px;
   margin: 10px;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
   overflow: hidden;
 }
 
