--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,7 @@
   /* Link Colors */
   --primary-link-hover-color: hsla(30, 100%, 50%, 1);
   --secondary-link-hover-color: hsla(90, 50%, 60%, 1);
+  --tertiary-link-hover-color: hsla(210, 50%, 60%, 1);
 
   /* Font Sizes */
   --primary-heading-font-size: 32px;
@@ -37,9 +38,9 @@
 
   /* Border Colors */
   --primary-border-color: hsla(210, 50%, 60%, 1); /* Blue */
-  --secondary-border-color: hsla(30, 100%, 50%, 1); /* Orange */
-  --tertiary-border-color: hsla(90, 50%, 60%, 1); /* Green */
-  --quaternary-border-color: hsla(210, 50%, 60%, 1); /* Blue */
+  --secondary-border-color: hsla(30, 100%, 50%, 0.5); /* Orange */
+  --tertiary-border-color: hsla(90, 50%, 60%, 0.5); /* Green */
+  --quaternary-border-color: hsla(210, 50%, 60%, 0.5); /* Blue */
 
   /* Background Colors */
   --primary-bg-color: hsla(210, 50%, 60%, 1); /* Blue */
@@ -83,9 +84,8 @@ h2 {
   color: var(--primary-heading-color);
   font-size: var(--primary-heading-font-size);
   border-right: 3px solid var(--primary-border-color);
-  padding: 10px;
-  margin: 25px;
-  margin-right: 15px;
+  padding: 5px;
+  margin-right: 30px;
 }
 
 h3 {
@@ -124,6 +124,7 @@ h6 {
 header {
   padding: 20px;
   background-color: var(--primary-bg-color);
+  border-bottom: 15px solid var(--tertiary-border-color);
 }
 
 nav {
@@ -170,6 +171,7 @@ nav {
 .myhero {
   background-color: var(--jumbo-bg-color);
   height: 400px;
+  border-bottom: 15px solid var(--tertiary-border-color);
 }
 
 .jumboButton {
@@ -200,7 +202,7 @@ body {
 }
 
 .page-section {
-  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 /* Skills */
@@ -601,9 +603,9 @@ body {
 
 /* Contact Me */
 #contact {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background-color: var(--jumbo-bg-color);
+  padding-top: 30px;
+  border-top: 15px solid var(--tertiary-border-color);
 }
 
 .contact-item {
@@ -622,13 +624,15 @@ body {
 }
 
 .contact-item a:hover {
-  color: var(--secondary-link-hover-color);
+  color: var(--tertiary-link-hover-color);
 }
 
 /* Footer */
 footer {
   background-color: var(--primary-bg-color);
   color: var(--base-color);
+  border-top: 15px solid var(--tertiary-border-color);
+  border-bottom: 15px solid var(--quaternary-border-color);
 }
 
 .custom-footer a {
