--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -167,11 +167,16 @@ nav {
   padding: 0.5rem 1rem;
 }
 
+.custom-toggler {
+  background-color: var(--secondary-bg-color);
+}
+
 /* Jumbotron */
 .myhero {
   background-color: var(--jumbo-bg-color);
-  height: 400px;
+  height: 500px;
   border-bottom: 15px solid var(--tertiary-border-color);
+  position: relative;
 }
 
 .jumboButton {
@@ -221,14 +226,6 @@ body {
   flex-direction: column;
   justify-content: space-between; /* Change to space-between for equal spacing */
   object-fit: contain;
-}
-
-.skill-container {
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  flex-direction: column;
-  align-items: center; */
 }
 
 .skill-logo {
